samples/_failures_safe/1761558244_6d7613_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55f509c3.c: In function ‘main’:
./samples/SAFE/__tmp_55f509c3.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
